--- a/New Admin/architectui-html-free/architectui-html-free/service.html
+++ b/New Admin/architectui-html-free/architectui-html-free/service.html
@@ -203,10 +203,10 @@
                                                 <div class="col-sm-10"><input name="day" id="exampleEmail" placeholder="Day" type="text" class="form-control"></div>
                                             </div>
                                             <div class="position-relative row form-group"><label for="examplePassword" class="col-sm-2 col-form-label">Opening Time</label>
-                                                <div class="col-sm-10"><input name="Opening_time" id="examplePassword" placeholder="Opening time" type="number" class="form-control"></div>
+                                                <div class="col-sm-10"><input name="Opening_time" id="examplePassword" placeholder="Opening time" type="time" class="form-control"></div>
                                             </div>
                                             <div class="position-relative row form-group"><label for="examplePassword" class="col-sm-2 col-form-label">Closing time</label>
-                                                <div class="col-sm-10"><input name="Closing_time" id="examplePassword" placeholder="Closing time" type="number" class="form-control"></div>
+                                                <div class="col-sm-10"><input name="Closing_time" id="examplePassword" placeholder="Closing time" type="time" class="form-control"></div>
                                             </div>
                                             <div class="position-relative row form-check">
                                                 <div class="col-sm-10 offset-sm-2">
