--- a/about.html
+++ b/about.html
@@ -115,14 +115,14 @@
 				</div>
 				</div>
 				<div class="col-sm-6 border-right">
-					<div class="goals-box">
+					<div class="goals-box testy">
 						<h4><i class="red fa fa-heart "></i> Testimonies</h4>
 						<p>Excepteur sint occaecat cupidatat non, <br> sunt in culpa qui officia dese mollit anim id est laborum. Sed ut perspiciatis unde omnis iste.</p>
 						<a href="#" class="s-readmore">Click here <i class="fa fa-angle-double-right"></i></a>
 					</div>
 					</div>
 					<div class="col-sm-6">
-					<div class="goals-box">
+					<div class="goals-box testy">
 						<h4><i class="red fa fa-volume-up "></i> Listen To Our Sermons</h4>
 						<p>Excepteur sint occaecat cupidatat non, <br> sunt in culpa qui officia dese mollit anim id est laborum. Sed ut perspiciatis unde omnis iste.</p>
 						<a href="sermons.html" class="s-readmore">Click here <i class="fa fa-angle-double-right"></i></a>
